DevOps/Bernstein/Project/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker-deployment
spec:
  selector:
    matchLabels:
      app: worker-deployment
  template:
    metadata:
      labels:
        app: worker-deployment
    spec:
      restartPolicy: Always
      containers:
      - name: worker-deployment
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: "256M"
