DevOps/Bernstein/Project/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-deployment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
