DevOps/Bernstein/Project/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
